[package]
name = "th-tools"
version = "0.1.0"
authors = ["Nelson.Young <slient2010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

redis = "0.21.0"
futures = "0.3"
